fixed layouting in chrome and improved web performance

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": "airbnb",
-  "plugins": ["react"]
+  "plugins": ["react"],
+  "rules": {
+    "import/no-named-as-default": 0
+  }
 }
