added code splitting to improve performance, restructured folders and files, added static typing for maintainability and consistensy using propTypes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb",
   "plugins": ["react"],
+  "parser": "babel-eslint",
   "rules": {
     "import/no-named-as-default": 0
   }
