--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-js-pagination": "^3.0.2",
     "react-lazyload": "^2.3.0",
     "react-loadable": "^5.5.0",
+    "react-loader": "^2.4.5",
+    "react-paginate": "^5.2.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
