--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-js-pagination": "^3.0.2",
     "react-lazyload": "^2.3.0",
     "react-loadable": "^5.5.0",
-    "react-loader": "^2.4.5",
-    "react-paginate": "^5.2.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^3.4.5"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
