--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "test": "react-scripts test --env=jsdom",
     "start-js": "react-scripts start",
     "build-js": "react-scripts build",
+    "lint": "tslint --project .",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "node-sass-chokidar": "^1.3.3"
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.8",
+    "node-sass-chokidar": "^1.3.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.1"
   }
 }
