--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "nodemon -w craco.config.js --exec \"craco start\"",
+    "start": "craco start",
+    "dev": "nodemon -w craco.config.js --exec \"craco start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
